2019/1/AMBASSADOR/deployment-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  labels:
    svc: grpc-server
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: grpc-server-mapping
      grpc: True
      prefix: /helloworld.Greeter/
      rewrite: /helloworld.Greeter/
      service: grpc-server.istio-proxy1.svc.cluster.local:50051
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
    protocol: TCP
  selector:
    app: grpc-server
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grpc-server-app
  labels:
    app: grpc-server
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: grpc-server
        version: v1
    spec:
      nodeSelector:
        classify: cpu
      containers:
      - name: grpc-server
        image: grpc-server-test:1.0
        ports:
        - containerPort: 50051
